feat(student): 添加学生答题页面图片上传和OCR识别功能
- 在学生答题页面添加图片上传组件，支持JPG/PNG/WebP格式
- 实现图片验证功能，限制文件大小不超过5MB
- 集成Qwen Vision Client实现图片OCR文字识别
- 支持仅上传图片或同时上传图片和文字答案
- 提交时自动合并图片识别文本和手动输入答案
- 添加图片上传提示信息和表单验证逻辑
- 服务端接收imageDataUrl参数并进行OCR处理
- 实现OCR结果回传和错误处理机制